support/обновить верхнюю панель шапки

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -106,13 +106,13 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
                         span.d-none(itemprop="addressRegion") Ростовская область
                         span.d-none(itemprop="addressLocality" content="Ростов-на-Дону")
                         span.d-none(itemprop="streetAddress") ул. Доватора, 11
-                        .contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-1
+                        .contacts__item.h5.text-nowrap.mb-1
                           +icon('placemark','contacts__icon h3 text-center color-theme-white mr-2')
                           span.color-theme-white г. Ростов-на-Дону
-                        a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-1(href="#")
+                        a.contacts__item.h5.text-nowrap.mb-1(href="#")
                           +icon('phone-nobg','contacts__icon h3 text-center color-theme-white mr-2')
                           span.color-theme-white(itemprop="telephone") +7 (863) 22-99-99-4
-                        a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-1(href="mailto:office@don-shina.ru" itemprop="email")
+                        a.contacts__item.h5.text-nowrap.mb-1(href="mailto:office@don-shina.ru" itemprop="email")
                           +icon('email','contacts__icon h3 text-center color-theme-white mr-2')
                           span.color-theme-white office@don-shina.ru
                     .col-4
