--- a/src/pug/personal-orders.pug
+++ b/src/pug/personal-orders.pug
@@ -103,7 +103,7 @@ block personal
           .px-3.pb-3
             .row
               .contacts.d-flex.align-items-center.justify-content-lg-between.flex-wrap.col-xl-7
-                a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-4.mr-lg-0.mb-2.mb-sm-0(href="#")
+                a.contacts__item.h5.text-nowrap.mr-4.mr-lg-0.mb-2.mb-sm-0(href="#")
                   +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2 pointer-events-none')
                   span.contacts__item-title Следить в Telegram
               .col-xl-5.d-flex.justify-content-xl-end
