--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -294,10 +294,10 @@ block wrapper
               input.form__field.input-phone(type="text" value="")
               .form__label.form__label_title Номер телефона *
           .contacts
-            a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+            a.contacts__item.h5.text-nowrap.mb-3(href="#")
               +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
               span.contacts__item-title Сообщить в WhatsApp
-            a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2(href="#")
+            a.contacts__item.h5.text-nowrap.mb-2(href="#")
               +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
               span.contacts__item-title Сообщить в Telegram
         .text-center.px-4
