--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -71,7 +71,7 @@ block wrapper
             br
             | или записаться вы можете по телефону:
           .contacts
-            a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.color-theme-brand(href="tel:+73652777068")
+            a.contacts__item.h3.font-weight-bold.text-nowrap.color-theme-brand(href="tel:+73652777068")
               +icon('phone','contacts__icon h3 color-theme-brand mr-2')
               span.contacts__item-title +7 (863) 22-99-99-4
     .mb-3
