--- a/src/scss/base/_extends.scss
+++ b/src/scss/base/_extends.scss
@@ -4,19 +4,29 @@
   @include px(2*$grid-gutter-width);
 }
 
-%d-flex {
+%d-flex-wrap {
   display: flex;
   flex-wrap: wrap;
 }
 
-%flex-item {
+%d-flex-nowrap {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+%d-flex-ai-center {
   display: flex;
   align-items: center;
 }
 
-%flex-column {
+%d-flex-column {
   display: flex;
   flex-direction: column;
+}
+
+%d-flex-centered {
+  @extend %d-flex-ai-center;
+  justify-content: center;
 }
 
 %btn-default {
