--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,6 +57,8 @@
 @import 'tpl/search';
 @import 'tpl/swiper';
 @import 'tpl/header';
+@import 'tpl/navbar';
+@import 'tpl/top-panel';
 @import 'tpl/togglebar';
 @import 'tpl/section';
 @import 'tpl/content';
