--- a/src/scss/tpl/_label.scss
+++ b/src/scss/tpl/_label.scss
@@ -1,5 +1,5 @@
 .label {
-  @extend %flex-item;
+  @extend %d-flex-ai-center;
   justify-content: center;
   height: 22px;
   border-radius: .75rem;
