--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -35,22 +35,22 @@ block wrapper
               span.d-none(itemprop="addressRegion") Ростовская область
               span.d-none(itemprop="addressLocality" content="Ростов-на-Дону")
               span.d-none(itemprop="streetAddress") ул. Доватора, 11
-              .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
+              .contacts__item.h5.text-wrap.mb-3
                 +icon('placemark','contacts__icon color-theme-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
-              a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
+              a.contacts__item.h3.font-weight-bold.text-nowrap.mb-3(href="#")
                 +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
                 span(itemprop="telephone") +7 (863) 22-99-99-4
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
+              a.contacts__item.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
                 +icon('email','contacts__icon color-theme-brand mr-2')
                 | office@don-shina.ru
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+              a.contacts__item.h5.text-nowrap.mb-3(href="#")
                 +icon('wapp','contacts__icon color-theme-brand mr-2')
                 | WhatsApp
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+              a.contacts__item.h5.text-nowrap.mb-3(href="#")
                 +icon('tg','contacts__icon color-theme-brand mr-2')
                 | Telegram
-              a.contacts__item.d-flex.align-items-start.h5(href="#")
+              a.contacts__item.align-items-start.h5(href="#")
                 +icon('time','contacts__icon color-theme-brand mr-2')
                 span Режим работы:
                   br
@@ -76,22 +76,22 @@ block wrapper
               span.d-none(itemprop="addressRegion") Ростовская область
               span.d-none(itemprop="addressLocality" content="Ростов-на-Дону")
               span.d-none(itemprop="streetAddress") ул. Доватора, 11
-              .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
+              .contacts__item.h5.text-wrap.mb-3
                 +icon('placemark','contacts__icon color-theme-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
-              a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
+              a.contacts__item.h3.font-weight-bold.text-nowrap.mb-3(href="#")
                 +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
                 span(itemprop="telephone") +7 (863) 22-99-99-4
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
+              a.contacts__item.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
                 +icon('email','contacts__icon color-theme-brand mr-2')
                 | office@don-shina.ru
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+              a.contacts__item.h5.text-nowrap.mb-3(href="#")
                 +icon('wapp','contacts__icon color-theme-brand mr-2')
                 | WhatsApp
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+              a.contacts__item.h5.text-nowrap.mb-3(href="#")
                 +icon('tg','contacts__icon color-theme-brand mr-2')
                 | Telegram
-              a.contacts__item.d-flex.align-items-start.h5(href="#")
+              a.contacts__item.align-items-start.h5(href="#")
                 +icon('time','contacts__icon color-theme-brand mr-2')
                 span Режим работы:
                   br
@@ -117,22 +117,22 @@ block wrapper
               span.d-none(itemprop="addressRegion") Ростовская область
               span.d-none(itemprop="addressLocality" content="Ростов-на-Дону")
               span.d-none(itemprop="streetAddress") ул. Доватора, 11
-              .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
+              .contacts__item.h5.text-wrap.mb-3
                 +icon('placemark','contacts__icon color-theme-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
-              a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
+              a.contacts__item.h3.font-weight-bold.text-nowrap.mb-3(href="#")
                 +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
                 span(itemprop="telephone") +7 (863) 22-99-99-4
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
+              a.contacts__item.h5.text-nowrap.mb-3(href="mailto:office@don-shina.ru" itemprop="email")
                 +icon('email','contacts__icon color-theme-brand mr-2')
                 | office@don-shina.ru
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+              a.contacts__item.h5.text-nowrap.mb-3(href="#")
                 +icon('wapp','contacts__icon color-theme-brand mr-2')
                 | WhatsApp
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+              a.contacts__item.h5.text-nowrap.mb-3(href="#")
                 +icon('tg','contacts__icon color-theme-brand mr-2')
                 | Telegram
-              a.contacts__item.d-flex.align-items-start.h5(href="#")
+              a.contacts__item.align-items-start.h5(href="#")
                 +icon('time','contacts__icon color-theme-brand mr-2')
                 span Режим работы:
                   br
