--- a/src/pug/personal-booking.pug
+++ b/src/pug/personal-booking.pug
@@ -24,10 +24,10 @@ block personal
     .px-lg-5.px-md-4.px-3.pb-3
       .row
         .contacts.d-flex.align-items-center.justify-content-lg-between.flex-wrap.col-xl-7
-          a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-4.mr-lg-0.mb-2.mb-sm-0(href="#")
+          a.contacts__item.h5.text-nowrap.mr-4.mr-lg-0.mb-2.mb-sm-0(href="#")
             +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
             span.contacts__item-title Напомнить в Telegram
-          a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-sm-0(href="#")
+          a.contacts__item.h5.text-nowrap.mb-2.mb-sm-0(href="#")
             +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
             span.contacts__item-title Напомнить в WhatsApp
         .col-xl-5.d-flex.justify-content-xl-end
