--- a/src/pug/ui_modals.pug
+++ b/src/pug/ui_modals.pug
@@ -39,10 +39,10 @@ block footer
             | Так же, Вы можете получать информацию в удобных для вас месенджерах, сообщив нам номер своей заявки.
         .row.zi-2
           .contacts.d-md-flex.flex-wrap.align-items-center.col-xl-10.mb-xl-0.mb-3
-            a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
+            a.contacts__item.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
               +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
               span.contacts__item-title Продолжить в Telegram
-            a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-xl-0(href="#")
+            a.contacts__item.h5.text-nowrap.mb-2.mb-xl-0(href="#")
               +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
               span.contacts__item-title Продолжить в WhatsApp
           .col-xl-2.d-flex.justify-content-xl-end
@@ -72,10 +72,10 @@ block footer
           .row.align-items-center.zi-2
             .contacts.d-md-flex.flex-wrap.align-items-center.col-xl-10.mb-xl-0.mb-3
               .h5.color-theme-brand.col-12.px-0.mb-2 Добравляйтесь и получайте напоминание там, где это удобно:
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
+              a.contacts__item.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
                 +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
                 span.contacts__item-title Следить в Telegram
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-xl-0(href="#")
+              a.contacts__item.h5.text-nowrap.mb-2.mb-xl-0(href="#")
                 +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
                 span.contacts__item-title Следить в WhatsApp
             .col-xl-2.d-flex.justify-content-xl-end
@@ -107,10 +107,10 @@ block footer
           .row.align-items-center.zi-2
             .contacts.d-md-flex.flex-wrap.align-items-center.col-xl-10.mb-xl-0.mb-3
               .h5.color-theme-brand.col-12.px-0.mb-2 Добравляйтесь и получайте напоминание там, где это удобно:
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
+              a.contacts__item.h5.text-nowrap.mr-0.mr-md-4.mb-2.mb-xl-0(href="#")
                 +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
                 span.contacts__item-title Следить в Telegram
-              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-xl-0(href="#")
+              a.contacts__item.h5.text-nowrap.mb-2.mb-xl-0(href="#")
                 +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
                 span.contacts__item-title Следить в WhatsApp
             .col-xl-2.d-flex.justify-content-xl-end
