--- a/src/scss/tpl/_pagination.scss
+++ b/src/scss/tpl/_pagination.scss
@@ -1,5 +1,5 @@
 .pagination {
-  @extend %flex-item;
+  @extend %d-flex-ai-center;
   justify-content: center;
   padding: .5rem;
   border-radius: .5rem;
@@ -8,7 +8,7 @@
 }
 
 .pagination__item {
-  @extend %flex-column;
+  @extend %d-flex-column;
   @include color($color__brand);
   @include fw(22px);
   @include wh(22px);
