--- a/src/scss/tpl/_swiper.scss
+++ b/src/scss/tpl/_swiper.scss
@@ -135,7 +135,7 @@
 .slides__nav {
   &.slides__nav_row {
     @extend %zi-2;
-    @extend %flex-item;
+    @extend %d-flex-ai-center;
 
     .slides__btn {
       margin: 0;
@@ -144,7 +144,7 @@
       color: $color__brand;
 
       &.swiper-button-disabled {
-        @extend %d-flex;
+        @extend %d-flex-wrap;
         color: $color__disabled;
       }
 
@@ -158,7 +158,7 @@
 
 .slides__btn {
   @extend %btn-default;
-  @extend %flex-column;
+  @extend %d-flex-column;
   @include wh(40px);
   @include offset(-1.563rem 0 0,.75rem .875rem);
   position: absolute;
