--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,6 +55,7 @@
 @import 'tpl/banner';
 @import 'tpl/social';
 @import 'tpl/search';
+@import 'tpl/search-panel';
 @import 'tpl/swiper';
 @import 'tpl/header';
 @import 'tpl/navbar';
