--- a/src/scss/base/_extends.scss
+++ b/src/scss/base/_extends.scss
@@ -148,6 +148,12 @@
   line-height: $line-height_content;
 }
 
+%text-oneline {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 %bordered {
   border-radius: .5rem;
   background: #FFFFFF;
