--- a/src/scss/tpl/_search-panel.scss
+++ b/src/scss/tpl/_search-panel.scss
@@ -2,4 +2,8 @@
   @include media-breakpoint-up(xl) {
     @include fw(100%/8*3);
   }
+
+  @include media-breakpoint-down(lg) {
+    display: none;
+  }
 }
