--- a/src/pug/tpl/header.pug
+++ b/src/pug/tpl/header.pug
@@ -2,7 +2,7 @@
 
 .top-panel
   .top-panel__wrapper.wrapper
-    .top-panel__contacts.col-xl-6.col-lg-12.col-md-8.px-0.px-lg-1.mb-xl-0.mb-lg-2
+    .top-panel__contacts.col-xl-6.col-lg-12.col-md-8.px-0.px-lg-1
       .contacts.contacts_type_row.col-xl-7.col-lg-5.flex-grow-1.flex-md-grow-0.w-auto.px-0
         .contacts__item.contacts__item_fs_sm.text-nowrap.mr-4
           +icon('placemark','contacts__icon h3 color-theme-brand mr-lg-2')
@@ -22,20 +22,20 @@
     nav.navbar.col-xl-1.col-lg-2.col-md-4
       button.navbar__title(type="button")
         span.mr-1 Помощь
-        +icon('dropdown','navbar__icon h6')
-      .navbar__wrapper.pt-2
-        a.navbar__link.mb-2(href="#") О компании
-        a.navbar__link.mb-2(href="#") Новости
-        a.navbar__link.mb-2(href="#") Статьи
-        a.navbar__link.mb-2(href="#") Вопросы и ответы
-        a.navbar__link.mb-2(href="#") Оплата и доставка
-        a.navbar__link.mb-2(href="#") Кредит
-        a.navbar__link.mb-2(href="#") КупиВкредит
-        a.navbar__link.mb-2(href="#") Политика конфиденциальности
+        +icon('dropdown','navbar__icon')
+      .navbar__wrapper
+        a.navbar__link(href="#") О компании
+        a.navbar__link(href="#") Новости
+        a.navbar__link(href="#") Статьи
+        a.navbar__link(href="#") Вопросы и ответы
+        a.navbar__link(href="#") Оплата и доставка
+        a.navbar__link(href="#") Кредит
+        a.navbar__link(href="#") КупиВкредит
+        a.navbar__link(href="#") Политика конфиденциальности
 
 include top-panel
 
-header.header.header_bottom.d-none
+//- header.header.header_bottom.d-none
   .header__wrapper.wrapper.d-flex.align-items-center
     .header__col.header__col_logo.justify-content-between.justify-content-lg-start.col-xl-4.col-lg-5.px-0.px-lg-1
       a.logo.logo_place_header.color-theme-brand.mr-4(href="#")
@@ -58,23 +58,23 @@ header.header.header_bottom.d-none
             .wrapper
               .row
                 .panel__nav.border-0.col-xl-4
-                  a.panel__nav-link.panel__nav-link_type_btn.d-flex.align-items-center.px-3.mb-xl-3(href="#")
+                  a.panel__nav-link.panel__nav-link_type_plain.d-flex.align-items-center.px-3.mb-xl-3(href="#")
                     +icon('services-tires','h3 color-theme-brand mr-2')
                     span.h4 Шиномонтаж
-                  a.panel__nav-link.panel__nav-link_type_btn.d-flex.align-items-center.px-3.mb-xl-3(href="#")
+                  a.panel__nav-link.panel__nav-link_type_plain.d-flex.align-items-center.px-3.mb-xl-3(href="#")
                     +icon('services-store','h3 color-theme-brand mr-2')
                     span.h4 Сезонное хранение шин и дисков
-                  a.panel__nav-link.panel__nav-link_type_btn.d-flex.align-items-center.px-3.mb-xl-3(href="#")
+                  a.panel__nav-link.panel__nav-link_type_plain.d-flex.align-items-center.px-3.mb-xl-3(href="#")
                     +icon('services-aircond','h3 color-theme-brand mr-2')
                     span.h4 Заправка автокондиционеров
-                .panel__nav.border-0.col-xl-4.mb-5.mb-xl-0
-                  a.panel__nav-link.panel__nav-link_type_btn.d-flex.align-items-center.px-3.mb-xl-3(href="#")
+                .panel__nav.col-xl-4.border-0.mb-5.mb-xl-0
+                  a.panel__nav-link.panel__nav-link_type_plain.d-flex.align-items-center.px-3.mb-xl-3(href="#")
                     +icon('services-wheel-rolled','h3 color-theme-brand mr-2')
                     span.h4 Прокатка дисков
-                  a.panel__nav-link.panel__nav-link_type_btn.d-flex.align-items-center.px-3.mb-xl-3(href="#")
+                  a.panel__nav-link.panel__nav-link_type_plain.d-flex.align-items-center.px-3.mb-xl-3(href="#")
                     +icon('services-wheel-painted','h3 color-theme-brand mr-2')
                     span.h4 Покраска дисков
-                  a.panel__nav-link.panel__nav-link_type_btn.d-flex.align-items-center.px-3.mb-xl-3(href="#")
+                  a.panel__nav-link.panel__nav-link_type_plain.d-flex.align-items-center.px-3.mb-xl-3(href="#")
                     +icon('services-vin','h3 color-theme-brand mr-2')
                     span.h4 Подбор по VIN
                 .col-xl-4
@@ -91,47 +91,47 @@ header.header.header_bottom.d-none
             .wrapper
               .row.align-items-start
                 .panel__nav.col-xl-2.pr-xl-2
-                  .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#tires")
+                  .panel__nav-item(data-target="#tires")
                     a.panel__nav-link.overflow-hidden.d-flex.align-items-center.flex-grow-1.panel__nav-link_active.px-3.py-xl-2.mr-1(href="#")
                       +icon('tires','h3 color-theme-brand mr-2')
-                      span.panel__nav-title.h4 Автошины
+                      span.panel__nav-title Автошины
                     button.panel__nav-btn(type="button")
                       +icon('arrow-right','color-theme-brand')
-                  .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#moto")
+                  .panel__nav-item(data-target="#moto")
                     a.panel__nav-link.overflow-hidden.d-flex.align-items-center.flex-grow-1.px-3.py-xl-2.mr-1(href="#")
                       +icon('moto','h3 color-theme-brand mr-2')
-                      span.panel__nav-title.h4 Мотошины
+                      span.panel__nav-title Мотошины
                     button.panel__nav-btn(type="button")
                       +icon('arrow-right','color-theme-brand')
-                  .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#wheels")
+                  .panel__nav-item(data-target="#wheels")
                     a.panel__nav-link.overflow-hidden.d-flex.align-items-center.flex-grow-1.px-3.py-xl-2.mr-1(href="#")
                       +icon('wheels','h3 color-theme-brand mr-2')
-                      span.panel__nav-title.h4 Диски
+                      span.panel__nav-title Диски
                     button.panel__nav-btn(type="button")
                       +icon('arrow-right','color-theme-brand')
-                  .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#battery")
+                  .panel__nav-item(data-target="#battery")
                     a.panel__nav-link.overflow-hidden.d-flex.align-items-center.flex-grow-1.px-3.py-xl-2.mr-1(href="#")
                       +icon('battery','h3 color-theme-brand mr-2')
-                      span.panel__nav-title.h4 Аккумуляторы
+                      span.panel__nav-title Аккумуляторы
                     button.panel__nav-btn(type="button")
                       +icon('arrow-right','color-theme-brand')
-                  .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#detail")
+                  .panel__nav-item(data-target="#detail")
                     a.panel__nav-link.overflow-hidden.d-flex.align-items-center.flex-grow-1.px-3.py-xl-2.mr-1(href="#")
                       +icon('detail','h3 color-theme-brand mr-2')
-                      span.panel__nav-title.h4 Автотовары
+                      span.panel__nav-title Автотовары
                     button.panel__nav-btn(type="button")
                       +icon('arrow-right','color-theme-brand')
-                  .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#oil")
+                  .panel__nav-item(data-target="#oil")
                     a.panel__nav-link.overflow-hidden.d-flex.align-items-center.flex-grow-1.px-3.py-xl-2.mr-1(href="#")
                       +icon('oil','h3 color-theme-brand mr-2')
-                      span.panel__nav-title.h4 Масла
+                      span.panel__nav-title Масла
                     button.panel__nav-btn(type="button")
                       +icon('arrow-right','color-theme-brand')
                 - var logolist = [{title:'Название бренда', img:'content/logo/logo-1.jpg'},{title:'Название бренда', img:'content/logo/logo-2.jpg'},{title:'Название бренда', img:'content/logo/logo-3.jpg'},{title:'Название бренда', img:'content/logo/logo-4.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'},{title:'Название бренда', img:'content/logo/logo-1.jpg'},{title:'Название бренда', img:'content/logo/logo-2.jpg'},{title:'Название бренда', img:'content/logo/logo-3.jpg'},{title:'Название бренда', img:'content/logo/logo-4.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'},{title:'Название бренда', img:'content/logo/logo-1.jpg'},{title:'Название бренда', img:'content/logo/logo-2.jpg'},{title:'Название бренда', img:'content/logo/logo-3.jpg'},{title:'Название бренда', img:'content/logo/logo-4.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'},{title:'Название бренда', img:'content/logo/logo-1.jpg'},{title:'Название бренда', img:'content/logo/logo-2.jpg'},{title:'Название бренда', img:'content/logo/logo-3.jpg'},{title:'Название бренда', img:'content/logo/logo-4.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'}]
                 #tires.panel__grid.panel__grid_active.col-xl-10
-                  .panel__content.px-xl-4
+                  .panel__content
                     .h4.mb-4.d-none.d-xl-block Производители автошин:
-                    button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                    button.panel__toggler(type="button")
                       +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
                       span.h5 Назад
                     .panel__subcategory.mb-4.mb-xl-0
@@ -144,7 +144,7 @@ header.header.header_bottom.d-none
                       a.readmore(href="#")
                         span.mr-2.pointer-events-none Показать еще
                         +icon('readmore','readmore__icon h3 color-theme-brand')
-                  .panel__aside.px-3.px-xl-4
+                  .panel__aside
                     .mb-4
                       a.toggler.py-1(href="#") Зимние шины
                       a.toggler.py-1(href="#") Летние шины
@@ -157,9 +157,9 @@ header.header.header_bottom.d-none
                         .banner__title.h2.font-weight-bold.color-theme-white Подбор запчастей по VIN-коду
                         a.button.text-uppercase(href="#") Подобрать
                 #moto.panel__grid.col-xl-10
-                  .panel__content.px-xl-4
+                  .panel__content
                     .h4.mb-4.d-none.d-xl-block Производители мотошин:
-                    button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                    button.panel__toggler(type="button")
                       +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
                       span.h5 Назад
                     .panel__subcategory.mb-4.mb-xl-0
@@ -172,7 +172,7 @@ header.header.header_bottom.d-none
                       a.readmore(href="#")
                         span.mr-2.pointer-events-none Показать еще
                         +icon('readmore','readmore__icon h3 color-theme-brand')
-                  .panel__aside.px-3.px-xl-4
+                  .panel__aside
                     .mb-4
                       a.toggler.py-1(href="#") Летние шины
                       a.toggler.py-1(href="#") Шины для внедорожников
@@ -184,27 +184,27 @@ header.header.header_bottom.d-none
                         .banner__title.h2.font-weight-bold.color-theme-white Подбор запчастей по VIN-коду
                         a.button.text-uppercase(href="#") Подобрать
                 #wheels.panel__grid.col-xl-10
-                  .panel__content.px-xl-4
+                  .panel__content
                     .h4.mb-4.d-none.d-xl-block Производители дисков
-                    button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                    button.panel__toggler(type="button")
                       +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
                       span.h5 Назад
                 #battery.panel__grid.col-xl-10
-                  .panel__content.px-xl-4
+                  .panel__content
                     .h4.mb-4.d-none.d-xl-block Производители аккумуляторов
-                    button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                    button.panel__toggler(type="button")
                       +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
                       span.h5 Назад
                 #detail.panel__grid.col-xl-10
-                  .panel__content.px-xl-4
+                  .panel__content
                     .h4.mb-4.d-none.d-xl-block Производители автотоваров
-                    button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                    button.panel__toggler(type="button")
                       +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
                       span.h5 Назад
                 #oil.panel__grid.col-xl-10
-                  .panel__content.px-xl-4
+                  .panel__content
                     .h4.mb-4.d-none.d-xl-block Производители масел
-                    button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                    button.panel__toggler(type="button")
                       +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
                       span.h5 Назад
     .header__panel.col-xl-8.col-lg-7.d-none.d--flex.align-items-center.mb-lg-3
