--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -510,9 +510,9 @@
         @include h6;
         display: block;
         margin-left: 0;
-        color: $color__text_default;
         letter-spacing: 0;
         line-height: $line-height_content;
+        color: $color__text_default;
       }
 
       @media (max-width:$breakpoint__custom_xs - 1) {
@@ -522,12 +522,22 @@
   }
 
   &.header__btn_active {
+    @include media-breakpoint-up(xl) {
+      z-index: 3;
+      position: relative;
+      border-radius: .5rem .5rem 0 0;
+    }
+
     .header__btn-icon_show {
-      display: none;
+      @include media-breakpoint-up(lg) {
+        display: none;
+      }
     }
 
     .header__btn-icon_close {
-      display: flex;
+      @include media-breakpoint-up(lg) {
+        display: flex;
+      }
     }
   }
 }
@@ -543,6 +553,7 @@
 
 .header__btn-title {
   display: none;
+  pointer-events: none;
 
   @media (min-width:$breakpoint__custom_xs) {
     margin-left: .5rem;
@@ -590,6 +601,7 @@
 
   @include media-breakpoint-up(lg) {
     flex-grow: 1;
+    margin-right: 1.5rem;
   }
 
   @include media-breakpoint-down(md) {
