--- a/src/scss/tpl/_navbar.scss
+++ b/src/scss/tpl/_navbar.scss
@@ -31,6 +31,7 @@
 }
 
 .navbar__icon {
+  @include h6;
   margin: 0 0 -.25rem;
   transition: all .3s ease;
 }
@@ -42,6 +43,7 @@
   right: 0;
   top: 100%;
   width: 200px;
+  padding-top: .5rem;
   opacity: 0;
   pointer-events: none;
   transition: all .3s ease;
@@ -61,5 +63,10 @@
   @extend %zi-2;
   @extend %theme-hover;
   @include h6;
+  margin-bottom: .5rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
